--- a/package.json
+++ b/package.json
@@ -16,20 +16,27 @@
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "postcss": "^8.4.5",
+    "postcss-load-config": "^3.1.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
+    "tailwindcss": "^3.0.15",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
   "type": "module",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.0",
+    "daisyui": "^1.24.3",
     "katex": "^0.15.2",
-    "mathjs": "^10.1.0"
+    "mathjs": "^10.1.0",
+    "theme-change": "^2.0.2"
   }
 }
