--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.66",
 		"@tailwindcss/typography": "^0.5.0",
 		"daisyui": "^1.24.3",
 		"katex": "^0.15.2",
