--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "comput",
 	"version": "0.0.1",
+	"engines": {
+		"node": "17.0.1",
+		"npm": "8.1.4"
+	},
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
